Fix link panel being cut off on responsive mode.

--- a/styles/sass/partials/_ulinkpanel.scss
+++ b/styles/sass/partials/_ulinkpanel.scss
@@ -374,6 +374,10 @@ div.ulinkpanel.ulinkpanel-dark .upfront-field-wrap{
 	left: 0px;
 	top: -29px;
 }
+/* Link panel on responsive breakpoints */
+.responsive-breakpoint .upfront-element-controls .upfront-inline-panel .ulinkpanel-dark {
+	left: -220px;
+}
 .upfront-element-controls .link-control-panel-first-level .link-control-panel {
 	position: relative;
 	top: 6px;
